# rpi-music-television-simulator

./: .gitignore  CMakeLists.txt  README.md  mpvplayer.sh  player.sh  server.sh
player/: CMakeLists.txt  cec.cc  comm.c  comm.h  dbus.c  dbus.h  dispmanx.c  dispmanx.h  sdtv_ctl.c  teletext.c  teletext.h  terminput.c  terminput.h  vcrfont.c  wait.c
teletext/: charts.js  parserworker.js  qrcode.js  rss.js  teletext.js  top20.txt  unicode.js
webserver/: CMakeLists.txt  index.js  inotify.c  line-buffer.js  main_join_meta.js  meta.js  package-lock.json  package.json  strap.js  volume_correct.js
webui/: package-lock.json  package.json  webpack.config.js
webui/src/: demo.jsx  index.jsx
